--- a/style.css
+++ b/style.css
@@ -11,38 +11,72 @@ body {
 	flex-direction: column;
 	height: 100vh;
 	background-color: hsl(226, 43%, 10%);
-	font-family: 'DM Sans', sans-serif;
+	font-family: 'Rubik', sans-serif;
 }
 
 .card-container {
-    display: flex;
-    width: 65rem;
-    height: 35rem;
-    background-color: wheat;
-    
+	display: flex;
+	width: 65rem;
+	height: 32rem;
 }
 
 .card-left {
-    width: 25%;
-    border-radius: 1rem;
-    overflow: hidden;
-    background-color:  hsl(235, 46%, 20%);
+	width: 25%;
+	border-radius: 1rem;
+	overflow: hidden;
+	background-color: hsl(235, 46%, 20%);
 }
 
 .card-left_top {
-    height: 70%;
-    background-color:  hsl(235, 45%, 61%);
-    border-radius: 1rem;
+	height: 70%;
+	padding: 2rem;
+	background-color: hsl(246, 80%, 60%);
+	border-radius: 1rem;
 }
+
+.photo-avatar {
+	height: 4rem;
+	width: 4rem;
+	margin-bottom: 4rem;
+	border: 2px solid white;
+	border-radius: 50%;
+}
+
+.report {
+	color: rgba(255, 255, 255, 0.436);
+	font-size: 14px;
+	font-weight: 300;
+}
+
+.name-surname {
+	color: white;
+	font-size: 2rem;
+	font-weight: 300;
+}
+
 .card-left_bottom {
-    height: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 2rem;
+	height: 30%;
+    color: rgba(255, 255, 255, 0.436);
+}
+.weekly {
+    color: white;
 }
 
 .card-right {
-    width: 75%;
+    display: flex;
+    flex-wrap: wrap;
+	width: 75%;
 }
 
-
+.card-right_conatiner {
+    width: 12rem;
+    height: 12rem;
+    background-color: wheat;
+}
 
 footer {
 	position: absolute;
