--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 
 .card-left {
 	width: 20%;
+    margin-right: 1rem;
 	border-radius: 1rem;
 	overflow: hidden;
 	background-color: hsl(235, 46%, 20%);
@@ -69,17 +70,37 @@ body {
 .card-right {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	width: 80%;
+	column-gap: 1rem;
+	row-gap: 1rem;
+	width: 50rem;
 }
 
 .card-right_conatiner {
-	width: 14rem;
-	height: 14rem;
 	background-color: wheat;
-	justify-self: center;
-    align-self: center;
-
 }
+
+.card-right_bottom {
+    height: 80%;
+    background-color: hsl(235, 46%, 20%);;
+    z-index: 1;
+    border-radius: 1rem;
+    
+}
+
+.card-right_top {
+    height: 20%;
+    position: relative;
+    overflow: hidden;
+    border-radius: 1rem;
+ 
+}
+.icon {
+    position: absolute;
+    width: 4rem;
+    right: 0;
+    z-index: 0;
+}
+
 
 footer {
 	position: absolute;
