--- a/style.css
+++ b/style.css
@@ -73,7 +73,14 @@ body {
 	column-gap: 1rem;
 	row-gap: 1rem;
 	width: 50rem;
+    
 }
+
+.card-right_conatiner {
+    cursor: pointer;
+}
+
+
 
 .card-right_bottom {
     position: relative;
@@ -88,6 +95,10 @@ body {
 	z-index: 1;
 }
 
+.card-right_bottom:hover{
+    background-color: hsl(235, 45%, 61%);
+}
+
 
 .hours {
     font-size: 3rem;
@@ -96,17 +107,48 @@ body {
 
 
 .card-right_top {
-	height: 2.7rem;
-	position: relative;
+	height: 3rem;
+    position: relative;
 	overflow: hidden;
 	border-top-left-radius: 1rem;
 	border-top-right-radius: 1rem;
-	background-color: wheat;
+
 }
+
+.work {
+    background-color: hsl(15, 100%, 70%);
+}
+
+.work, .play, .study, .exercise, .social, .self-care{
+    border-radius: 1rem;
+
+}
+
+.play {
+    background-color: hsl(195, 74%, 62%);
+}
+
+.study {
+    background-color: hsl(348, 100%, 68%);
+}
+
+.exercise {
+    background-color:hsl(145, 58%, 55%)
+}
+
+.social {
+    background-color: hsl(264, 64%, 52%);
+}
+
+.self-care {
+    background-color: hsl(43, 84%, 65%);
+}
+
+
 .icon {
 	position: absolute;
 	width: 4rem;
-	right: 0;
+	right: 1rem;
 	z-index: 0;
 }
 
@@ -117,6 +159,8 @@ body {
     padding-right: 2rem;
     padding-top: 2.4rem;
 }
+
+
 
 footer {
 	position: absolute;
